@@ -30,7 +30,6 @@ import org.eclipse.core.runtime.IConfigurationElement;
 import org.eclipse.core.runtime.IExtension;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.emf.common.EMFPlugin;
-import org.eclipse.emf.common.util.Diagnostic;
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.util.ECrossReferenceAdapter;
 import org.eclipse.sirius.common.tools.DslCommonPlugin;
@@ -51,7 +50,7 @@ import org.eclipse.sirius.ecore.extender.business.api.accessor.ModelAccessor;
  *
  * @author ymortier
  */
-public final class CompoundInterpreter implements IInterpreter, IProposalProvider, TypedValidation, IInterpreterWithDiagnostic {
+public final class CompoundInterpreter implements IInterpreter, IProposalProvider, TypedValidation {
 
     /** The shared instance of the registry. */
     public static final CompoundInterpreter INSTANCE = new CompoundInterpreter();
@@ -135,26 +134,7 @@ public final class CompoundInterpreter implements IInterpreter, IProposalProvide
     @Override
     public IEvaluationResult evaluateExpression(final EObject target, final String expression) throws EvaluationException {
         final IInterpreter interpreter = getInterpreterForExpression(expression);
-        if (interpreter instanceof IInterpreterWithDiagnostic) {
-            return ((IInterpreterWithDiagnostic) interpreter).evaluateExpression(target, expression);
-        }
-
-        // Fall back on the default behavior otherwise with an OK diagnostic
-        final Object result = interpreter.evaluate(target, expression);
-
-        IEvaluationResult evaluationResult = new IEvaluationResult() {
-            @Override
-            public Object getValue() {
-                return result;
-            }
-
-            @Override
-            public Diagnostic getDiagnostic() {
-                return Diagnostic.OK_INSTANCE;
-            }
-        };
-
-        return evaluationResult;
+        return interpreter.evaluateExpression(target, expression);
     }
 
     @Override
