@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2018 Obeo.
+ * Copyright (c) 2018, 2019 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -24,7 +24,6 @@ import org.eclipse.sirius.common.interpreter.api.EvaluationResult;
 import org.eclipse.sirius.common.interpreter.api.IEvaluationResult;
 import org.eclipse.sirius.common.interpreter.api.IInterpreter;
 import org.eclipse.sirius.common.tools.api.interpreter.EvaluationException;
-import org.eclipse.sirius.common.tools.api.interpreter.IInterpreterWithDiagnostic;
 
 /**
  * The interpreter used by the backend.
@@ -35,7 +34,7 @@ public class SiriusBackendInterpreter implements IInterpreter {
     /**
      * The interpreter of the Sirius session.
      */
-    private IInterpreterWithDiagnostic interpreter;
+    private org.eclipse.sirius.common.tools.api.interpreter.IInterpreter interpreter;
 
     /**
      * The constructor.
@@ -44,7 +43,7 @@ public class SiriusBackendInterpreter implements IInterpreter {
      *            The Sirius session
      */
     public SiriusBackendInterpreter(Session session) {
-        this((IInterpreterWithDiagnostic) session.getInterpreter());
+        this(session.getInterpreter());
     }
 
     /**
@@ -53,7 +52,7 @@ public class SiriusBackendInterpreter implements IInterpreter {
      * @param interpreterWithDiagnostic
      *            An interpreter
      */
-    public SiriusBackendInterpreter(IInterpreterWithDiagnostic interpreterWithDiagnostic) {
+    public SiriusBackendInterpreter(org.eclipse.sirius.common.tools.api.interpreter.IInterpreter interpreterWithDiagnostic) {
         this.interpreter = Objects.requireNonNull(interpreterWithDiagnostic);
     }
 
@@ -76,10 +75,7 @@ public class SiriusBackendInterpreter implements IInterpreter {
     }
 
     private void setupInterpreter(Map<String, Object> variables) {
-        if (this.interpreter instanceof org.eclipse.sirius.common.tools.api.interpreter.IInterpreter) {
-            org.eclipse.sirius.common.tools.api.interpreter.IInterpreter i = (org.eclipse.sirius.common.tools.api.interpreter.IInterpreter) this.interpreter;
-            declareLocals(variables, i);
-        }
+        declareLocals(variables, interpreter);
     }
 
     private void declareLocals(Map<String, Object> variables, org.eclipse.sirius.common.tools.api.interpreter.IInterpreter i) {
@@ -90,9 +86,7 @@ public class SiriusBackendInterpreter implements IInterpreter {
     }
 
     private void tearDownInterpreter(Map<String, Object> variables) {
-        if (this.interpreter instanceof org.eclipse.sirius.common.tools.api.interpreter.IInterpreter) {
-            unsetLocals(variables, (org.eclipse.sirius.common.tools.api.interpreter.IInterpreter) this.interpreter);
-        }
+        unsetLocals(variables, this.interpreter);
     }
 
     private void unsetLocals(Map<String, Object> variables, org.eclipse.sirius.common.tools.api.interpreter.IInterpreter iInterpreter) {
